Migrate maven to gradle